jena-shex/src/test/files/spec/negativeSyntax/STRING_LITERAL2-illegal-UCHAR1-value.shex
# STRING_LITERAL2 with illegal UCHAR1 value
# source: turtle-syntax-bad-esc-03.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1> ["\U0000WXYZ"]
}
